--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -5,11 +5,24 @@ body{
 }
 #container{
     width: 70%;
-    padding: 1em;
+    padding: 0;
     text-align: left;
     border: 2px solid #DDD;
     margin: 0 auto;
 }
 #container h1{
     font-size: 30px;
+}
+#cabecera{
+    background: #2e4d7c;
+    box-shadow: 0px 18px 21px -20px rgba(0,0,0,0.75);
+    color: white;
+    margin:0;
+    padding: 0.5em;
+    font-weight: bold;
+    font-size: 25px;
+}
+#post{
+    padding: 0;
+    margin: 0px  20px 0px 20px;
 }
