--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -1,9 +1,10 @@
 body{
-    color: rgb(202, 33, 33);
+    background: rgb(20, 12, 12);
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
 }
 #container{
+    background:white;
     width: 70%;
     padding: 0;
     text-align: left;
@@ -14,15 +15,23 @@ body{
     font-size: 30px;
 }
 #cabecera{
-    background: #2e4d7c;
+    background: #1e58b1;
     box-shadow: 0px 18px 21px -20px rgba(0,0,0,0.75);
     color: white;
     margin:0;
     padding: 0.5em;
     font-weight: bold;
     font-size: 25px;
+    text-align: center;
 }
 #post{
-    padding: 0;
-    margin: 0px  20px 0px 20px;
+    padding: 20px;
+    margin: 0px  40px 0px 40px;
+}
+#logo{
+    height: 30px;
+}
+#parrafos{
+    border: 1px solid black;
+    padding: 0.5em;
 }
